Add Citation and link to SLiMSuite

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,8 +1,15 @@
-@misc{CompariMotif.jl,
-	author  = {Diego Javier Zea <diegozea@gmail.com> and contributors},
-	title   = {CompariMotif.jl},
-	url     = {https://github.com/diegozea/CompariMotif.jl},
-	version = {v0.0.1},
-	year    = {2026},
-	month   = {2}
+@article{10.1093/bioinformatics/btn105,
+    author = {Edwards, Richard J. and Davey, Norman E. and Shields, Denis C.},
+    title = {CompariMotif: quick and easy comparisons of sequence motifs},
+    journal = {Bioinformatics},
+    volume = {24},
+    number = {10},
+    pages = {1307-1309},
+    year = {2008},
+    month = {03},
+    abstract = {Summary: CompariMotif is a novel tool for making motif–motif comparisons, identifying and describing similarities between regular expression motifs. CompariMotif can identify a number of different relationships between motifs, including exact matches, variants of degenerate motifs and complex overlapping motifs. Motif relationships are scored using shared information content, allowing the best matches to be easily identified in large comparisons. Many input and search options are available, enabling a list of motifs to be compared to itself (to identify recurring motifs) or to datasets of known motifs.Availability: CompariMotif can be run online at http://bioware.ucd.ie/ and is freely available for academic use as a set of open source Python modules under a GNU General Public License from http://bioinformatics.ucd.ie/shields/software/comparimotif/Contact:  r.edwards@southampton.ac.ukSupplementary information: Further details are available at http://bioinformatics.ucd.ie/shields/software/comparimotif/},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btn105},
+    url = {https://doi.org/10.1093/bioinformatics/btn105},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/24/10/1307/49046855/bioinformatics_24_10_1307.pdf},
 }
